# vorticity_equation

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  arakawa.py  compare.py
cmake/: start_simulation.sh.in
include/: general_operatos.h  grid.h  grid.hpp  multigrid.h  param.h  param.hpp  physical_diagnostics.h  utility.h  vorticity_eq.h  write_solution.h
mms/: manufacture_solution.py
post_processing/: compare_schemes.py  multigrid.py  spectral_analysis.py  visualize.py
py_version/: arakawa.py
src/: main.cpp  multigrid.cpp  vorticity_eq.cpp
src/diagnostics/: physical_diagnostics.cpp
src/files/: param.cpp  write_solution.cpp
src/general_operators/: general_operators.cpp
src/grid/: grid.cpp
src/utility/: utility.cpp
vorticity_simulation/: CMakeLists.txt  main.cpp  visualize.py
